# summarise-youtube-video

./: .env.example  .gitignore  AGENT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  summarise-video  yt-transcript
tests/: test_cli.py  test_regression.py  test_standalone_script.py
yt_transcript/: cli.py
