[project]
name = "yt-transcript"
version = "0.1.0"
description = "CLI to fetch YouTube transcripts and copy them to the clipboard"
authors = [{name = "User"}]
requires-python = ">=3.8"
dependencies = [
    "click>=8",
    "pyperclip>=1.8",
    "youtube-transcript-api>=0.6",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-mock>=3.10",
    "responses>=0.23",
]

[project.scripts]
yt-trans = "yt_transcript.cli:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--strict-markers --disable-warnings"
